feature: added documentation
    * added promptApi interface for maintaining api spec
    * added swagger to generate api-docs
    * updated readme file with relevant details

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,9 @@ server:
     port: ${SERVER_PORT:8091}
     servlet:
         context-path: ${SERVER_CONTEXT_PATH:/promptstore}
+
+springdoc:
+    api-docs:
+        path: /api-spec
+    swagger-ui:
+        path: /swagger-ui
