--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ spring:
             database: ${MONGODB_DATABASE:promptstore}
             username: ${MONGODB_USERNAME:db_user}
             password: ${MONGODB_PASSWORD:db_password}
+    profiles:
+        active: ${SPRING_ACTIVE_PROFILE:auth}
 server:
     port: ${SERVER_PORT:8091}
     servlet:
