--- a/docker/docker-compose-dependencies.yaml
+++ b/docker/docker-compose-dependencies.yaml
@@ -13,6 +13,13 @@ services:
       - .\mongo-init:/docker-entrypoint-initdb.d
     networks:
       - "promptstore"
-
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+      - "9300:9300"
 networks:
   promptstore:
