feature; added search feature on elastic search

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,5 +1,12 @@
-{"properties": [{
-  "name": "auth.jwt.key",
-  "type": "java.lang.String",
-  "description": "jwt signing key"
-}]}
+{"properties": [
+  {
+    "name": "auth.jwt.key",
+    "type": "java.lang.String",
+    "description": "jwt signing key"
+  },
+  {
+    "name": "elasticsearch.url",
+    "type": "java.lang.String",
+    "description": "A description for 'elasticsearch.url'"
+  }
+]}
